# vala

./: .bzrignore  .dir-locals.el  .editorconfig  .gitignore  .gitlab-ci.yml  AUTHORS  CONTRIBUTING.md  ChangeLog  MAINTAINERS  Makefile  Makefile.am  Makefile.common  NEWS  README  README.md  THANKS  autogen.sh  config.h.in  config.h.meson  configure  configure.ac  configure.in  doctree.vala  drawer.vala  errorreporter.vala  libvala.pc.in  local_configure.sh  local_install.sh  meson-bootstrap.sh  meson.build  meson_options.txt  parser.vala  run_genie_tests.py  settings.vala  unversioned-install.sh  vala-1.0.pc.in  vala.doap  vala.m4  valac  valadoc.doap  (+5 more)
ccode/: .gitignore  Makefile.am  Makefile.sources  meson.build  valaccode.vala  valaccodeassignment.vala  valaccodebinarycompareexpression.vala  valaccodebinaryexpression.vala  valaccodeblock.vala  valaccodebreakstatement.vala  valaccodecasestatement.vala  valaccodecastexpression.vala  valaccodecommaexpression.vala  valaccodecomment.vala  valaccodeconditionalexpression.vala  valaccodeconstant.vala  valaccodeconstantidentifier.vala  valaccodecontinuestatement.vala  valaccodedeclaration.vala  valaccodedeclarator.vala  valaccodedefine.vala  valaccodedostatement.vala  valaccodeelementaccess.vala  valaccodeemptystatement.vala  valaccodeenum.vala  valaccodeenumvalue.vala  valaccodeexpression.vala  valaccodeexpressionstatement.vala  valaccodefeaturetestmacro.vala  valaccodefile.vala  valaccodeformalparameter.vala  valaccodeforstatement.vala  valaccodefragment.vala  valaccodefunction.vala  valaccodefunctioncall.vala  valaccodefunctiondeclarator.vala  valaccodeggnucsection.vala  valaccodegotostatement.vala  valaccodeidentifier.vala  valaccodeifsection.vala  (+26 more)
codegen/: .gitignore  Makefile.am  Makefile.sources  meson.build  valaccode.vala  valaccodearraymodule.vala  valaccodeassignmentmodule.vala  valaccodeattribute.vala  valaccodebasemodule.vala  valaccodeclassmodule.vala  valaccodecompiler.vala  valaccodecontrolflowmodule.vala  valaccodedeclarationspace.vala  valaccodedelegatemodule.vala  valaccodegenerator.vala  valaccodememberaccessmodule.vala  valaccodemethodcallmodule.vala  valaccodemethodmodule.vala  valaccodemodule.vala  valaccodestructmodule.vala  valaccodetransformer.vala  valaclassregisterfunction.vala  valacppmodule.vala  valactype.vala  valadbusclientmodule.vala  valadbusinterfaceregisterfunction.vala  valadbusmodule.vala  valadbusservermodule.vala  valadovaarraymodule.vala  valadovaassignmentmodule.vala  valadovabasemodule.vala  valadovacontrolflowmodule.vala  valadovadelegatemodule.vala  valadovaerrormodule.vala  valadovamemberaccessmodule.vala  valadovamethodcallmodule.vala  valadovamethodmodule.vala  valadovaobjectmodule.vala  valadovastructmodule.vala  valadovavaluemodule.vala  (+21 more)
compiler/: .gitignore  Makefile.am  Makefile.sources  meson.build  valacompiler.vala
dbusgen/: .gitignore  Makefile.am  valadbusgen.pc.in  valadbusgen.vala  valadbusgenextension.vala  valadbusnamespacestrategy.vala  valadbusparser.vala  valadbusvariantmodule.vala
doc/: Makefile.am  building.txt  gidlgen.1  meson.build  vala-gen-introspect.1  vala-gen-introspect.h2m  valac.1  valac.h2m  valadbusgen.1  valadbusgen.h2m  valadoc.1  valadoc.h2m  vapigen.1  vapigen.h2m
gee/: .gitignore  Makefile.am  Makefile.sources  abstractbidirlist.vala  abstractbidirsortedmap.vala  abstractbidirsortedset.vala  abstractcollection.vala  abstractlist.vala  abstractmap.vala  abstractmultimap.vala  abstractmultiset.vala  abstractqueue.vala  abstractset.vala  abstractsortedmap.vala  abstractsortedset.vala  arraylist.vala  arrayqueue.vala  bidiriterator.vala  bidirlist.vala  bidirlistiterator.vala  bidirmapiterator.vala  bidirsortedmap.vala  bidirsortedset.vala  collection.vala  collectionobject.vala  comparable.vala  concurrentlist.vala  concurrentset.vala  deque.vala  functions.vala  future.vala  hashable.vala  hashmap.vala  hashmultimap.vala  hashmultiset.vala  hashset.vala  hazardpointer.vala  iterable.vala  iterator.vala  lazy.vala  (+37 more)
gen-project/: Makefile.am  valaprojectgenerator.vala
gobject/: .gitignore  Makefile.am  valaccodearraycreationexpressionbinding.vala  valaccodearraymodule.vala  valaccodeassignmentbinding.vala  valaccodeassignmentmodule.vala  valaccodebasemodule.vala  valaccodebinding.vala  valaccodeclassbinding.vala  valaccodecompiler.vala  valaccodecontrolflowmodule.vala  valaccodecreationmethodbinding.vala  valaccodedeclarationspace.vala  valaccodedelegatemodule.vala  valaccodedynamicmethodbinding.vala  valaccodedynamicpropertybinding.vala  valaccodedynamicpropertymodule.vala  valaccodedynamicsignalbinding.vala  valaccodedynamicsignalmodule.vala  valaccodeelementaccessbinding.vala  valaccodeelementaccessmodule.vala  valaccodeexpressionbinding.vala  valaccodegenerator.vala  valaccodegeneratorassignment.vala  valaccodegeneratorclass.vala  valaccodegeneratorinterface.vala  valaccodegeneratorinvocationexpression.vala  valaccodegeneratormemberaccess.vala  valaccodegeneratormethod.vala  valaccodegeneratorsignal.vala  valaccodegeneratorsourcefile.vala  valaccodegeneratorstruct.vala  valaccodeinterfacebinding.vala  valaccodeinvocationexpressionbinding.vala  valaccodeinvocationexpressionmodule.vala  valaccodememberaccessbinding.vala  valaccodememberaccessmodule.vala  valaccodemethodbinding.vala  valaccodemethodcallmodule.vala  valaccodemethodmodule.vala  (+33 more)
gobject-introspection/: .gitignore  Makefile.am  clexer.l  cparser.y  gen-introspect.c  gen-introspect.h  gidl.vala  gidl.vapi  gidlmodule.c  gidlnode.c  gidlnode.h  gidlparser.c  gidlwriter.c  gmetadata.c  grealpath.h  meson.build  scanner.c  scanner.h  scannerlexer.l  scannerparser.y
icons/: Makefile.am  devhelpstyle.css  scripts.js  style.css  wikistyle.css
libvaladoc/: .gitignore  Makefile.am  ctyperesolver.vala  devhelp-markupwriter.vala  doclet.vala  errorreporter.vala  filehelper.vala  gtkdocrenderer.vala  gvc-compat.c  markupreader.vala  markupsourcelocation.vala  markuptokentype.vala  markupwriter.vala  meson.build  moduleloader.vala  settings.vala  valadoc.deps.in  valadoc.pc.in
vala/: AUTHORS  (+217 more)
(+4491 files in other folders)
