dnl configure.in
AC_PREREQ(2.59)
AC_INIT(Valadoc, 0.2, flo.brosch@gmail.com)
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([src/valadoc/valadoc.vala])
AC_CONFIG_HEADER([config.h])


AC_PROG_CC
AC_PROG_LIBTOOL


AC_PATH_PROG(VALAC, valac, valac)
AC_SUBST(VALAC)



AC_ARG_ENABLE(valadocorg, AS_HELP_STRING([--enable-valadocorg], []), enable_valadocorg=$enableval, enable_valadocorg=no)
AM_CONDITIONAL(ENABLE_VALADOCORG, test x$enable_valadocorg = xyes)




LIBVALA_REQUIRED=0.3.4
LIBGVC_REQUIRED=2.16
GLIB_REQUIRED=2.12.0
GTK_REQUIRED=2.10.0
LIBXML2_REQUIRED=2.0
LIBGDKPIXBUF_REQUIRED=2.0


PKG_CHECK_MODULES(LIBXML2, libxml-2.0 >= $LIBXML2_REQUIRED )
AC_SUBST(LIBXML2_CFLAGS)
AC_SUBST(LIBXML2_LIBS)

PKG_CHECK_MODULES(LIBGVC, libgvc >= $LIBGVC_REQUIRED )
AC_SUBST(LIBGVC_CFLAGS)
AC_SUBST(LIBGVC_LIBS)

PKG_CHECK_MODULES(GLIB, glib-2.0 >= $GLIB_REQUIRED gobject-2.0 >= $GLIB_REQUIRED)
AC_SUBST(GLIB_CFLAGS)
AC_SUBST(GLIB_LIBS)

PKG_CHECK_MODULES(GMODULE, gmodule-2.0 >= $GLIB_REQUIRED)
AC_SUBST(GMODULE_CFLAGS)
AC_SUBST(GMODULE_LIBS)

PKG_CHECK_MODULES(LIBVALA, vala-1.0 >= $LIBVALA_REQUIRED)
AC_SUBST(LIBVALA_CFLAGS)
AC_SUBST(LIBVALA_LIBS)

PKG_CHECK_MODULES(LIBGDKPIXBUF, gdk-pixbuf-2.0 >= $LIBGDKPIXBUF_REQUIRED)
AC_SUBST(LIBGDKPIXBUF_CFLAGS)
AC_SUBST(LIBGDKPIXBUF_LIBS)



AC_CONFIG_FILES([Makefile
                 src/libvaladoc/valadoc-1.0.pc
                 src/Makefile
                 src/libvaladoc/Makefile
                 src/vapi/Makefile
                 src/doclets/Makefile
                 src/doclets/htmlhelpers/Makefile
                 src/doclets/htmlhelpers/deps/Makefile
                 src/doclets/htmlhelpers/languages/Makefile
                 src/doclets/htmlhelpers/doclet/Makefile
                 src/doclets/htmlhelpers/taglets/Makefile
                 src/doclets/htmlhelpers/taglets/see/Makefile
                 src/doclets/htmlhelpers/taglets/link/Makefile
                 src/doclets/htmlhelpers/taglets/constants/Makefile
                 src/doclets/htmlhelpers/taglets/list/Makefile
                 src/doclets/htmlhelpers/taglets/bold/Makefile
                 src/doclets/htmlhelpers/taglets/since/Makefile
                 src/doclets/htmlhelpers/taglets/table/Makefile
                 src/doclets/htmlhelpers/taglets/right/Makefile
                 src/doclets/htmlhelpers/taglets/image/Makefile
                 src/doclets/htmlhelpers/taglets/paragraph/Makefile
                 src/doclets/htmlhelpers/taglets/throws/Makefile
                 src/doclets/htmlhelpers/taglets/string/Makefile
                 src/doclets/htmlhelpers/taglets/center/Makefile
                 src/doclets/htmlhelpers/taglets/italic/Makefile
                 src/doclets/htmlhelpers/taglets/return/Makefile
                 src/doclets/htmlhelpers/taglets/source/Makefile
                 src/doclets/htmlhelpers/taglets/headline/Makefile
                 src/doclets/htmlhelpers/taglets/typelink/Makefile
                 src/doclets/htmlhelpers/taglets/underline/Makefile
                 src/doclets/htmlhelpers/taglets/parameter/Makefile
                 src/doclets/htmlhelpers/taglets/tablecell/Makefile
                 src/doclets/htmlhelpers/taglets/listelement/Makefile
                 src/doclets/htmlhelpers/taglets/notification/Makefile
                 src/doclets/htm/Makefile
                 src/doclets/htm/doclet/Makefile
                 src/doclets/valadoc.org/Makefile
                 src/doclets/valadoc.org/doclet/Makefile
                 src/doclets/valadoc.org/taglets/Makefile
                 src/doclets/valadoc.org/taglets/see/Makefile
                 src/doclets/valadoc.org/taglets/paragraph/Makefile
                 src/doclets/valadoc.org/taglets/link/Makefile
                 src/doclets/valadoc.org/taglets/constants/Makefile
                 src/doclets/valadoc.org/taglets/list/Makefile
                 src/doclets/valadoc.org/taglets/bold/Makefile
                 src/doclets/valadoc.org/taglets/since/Makefile
                 src/doclets/valadoc.org/taglets/table/Makefile
                 src/doclets/valadoc.org/taglets/right/Makefile
                 src/doclets/valadoc.org/taglets/image/Makefile
                 src/doclets/valadoc.org/taglets/throws/Makefile
                 src/doclets/valadoc.org/taglets/string/Makefile
                 src/doclets/valadoc.org/taglets/center/Makefile
                 src/doclets/valadoc.org/taglets/italic/Makefile
                 src/doclets/valadoc.org/taglets/return/Makefile
                 src/doclets/valadoc.org/taglets/source/Makefile
                 src/doclets/valadoc.org/taglets/headline/Makefile
                 src/doclets/valadoc.org/taglets/typelink/Makefile
                 src/doclets/valadoc.org/taglets/underline/Makefile
                 src/doclets/valadoc.org/taglets/parameter/Makefile
                 src/doclets/valadoc.org/taglets/tablecell/Makefile
                 src/doclets/valadoc.org/taglets/listelement/Makefile
                 src/doclets/valadoc.org/taglets/notification/Makefile
                 src/doclets/devhelp/Makefile
                 src/doclets/devhelp/doclet/Makefile
                 src/valadoc/Makefile])

AC_OUTPUT
