dnl configure.in
AC_PREREQ(2.59)
AC_INIT(Valadoc, 0.2.1, flo.brosch@gmail.com)
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([src/valadoc/valadoc.vala])
AC_CONFIG_HEADER([config.h])
AM_MAINTAINER_MODE

AM_INIT_AUTOMAKE([foreign])
m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])

AC_PROG_CC
AC_PROG_LIBTOOL


AC_PATH_PROG(VALAC, valac, valac)
AC_SUBST(VALAC)


AC_SUBST(VALAFLAGS)


VALA_PACKAGE=libvala-0.14
LIBVALA_REQUIRED=0.13.0
LIBGEE_REQUIRED=0.5
LIBGVC_REQUIRED=2.16
GLIB_REQUIRED=2.12.0
GTK_REQUIRED=2.10.0
LIBGDKPIXBUF_REQUIRED=2.0




PKG_CHECK_MODULES(LIBGVC, libgvc >= $LIBGVC_REQUIRED)
AC_SUBST(LIBGVC_CFLAGS)
AC_SUBST(LIBGVC_LIBS)

PKG_CHECK_MODULES(GLIB, glib-2.0 >= $GLIB_REQUIRED gobject-2.0 >= $GLIB_REQUIRED)
AC_SUBST(GLIB_CFLAGS)
AC_SUBST(GLIB_LIBS)

PKG_CHECK_MODULES(GMODULE, gmodule-2.0 >= $GLIB_REQUIRED)
AC_SUBST(GMODULE_CFLAGS)
AC_SUBST(GMODULE_LIBS)

PKG_CHECK_MODULES(LIBGEE, gee-1.0 >= $LIBGEE_REQUIRED)
AC_SUBST(LIBGEE_CFLAGS)
AC_SUBST(LIBGEE_LIBS)

PKG_CHECK_MODULES(LIBGDKPIXBUF, gdk-pixbuf-2.0 >= $LIBGDKPIXBUF_REQUIRED)
AC_SUBST(LIBGDKPIXBUF_CFLAGS)
AC_SUBST(LIBGDKPIXBUF_LIBS)




##
## Drivers:
##

PKG_CHECK_MODULES(LIBVALA_0_13, libvala-0.14 >= 0.13, have_libvala_0_13="yes", have_libvala_0_13="no")
AM_CONDITIONAL(HAVE_LIBVALA_0_13, test "$have_libvala_0_13" = "yes")
AC_SUBST(LIBVALA_0_13_CFLAGS)
AC_SUBST(LIBVALA_0_13_LIBS)


PKG_CHECK_MODULES(LIBVALA_0_12, libvala-0.12 >= 0.12, have_libvala_0_12="yes", have_libvala_0_12="no")
AM_CONDITIONAL(HAVE_LIBVALA_0_12, test "$have_libvala_0_12" = "yes")
AC_SUBST(LIBVALA_0_12_CFLAGS)
AC_SUBST(LIBVALA_0_12_LIBS)


PKG_CHECK_MODULES(LIBVALA_0_11_X, libvala-0.12 > 0.11.1 libvala-0.12 <= 0.12, have_libvala_0_11_x="yes", have_libvala_0_11_x="no")
AM_CONDITIONAL(HAVE_LIBVALA_0_11_X, test "$have_libvala_0_11_x" = "yes")
AC_SUBST(LIBVALA_0_11_X_CFLAGS)
AC_SUBST(LIBVALA_0_11_X_LIBS)


PKG_CHECK_MODULES(LIBVALA_0_11_0, libvala-0.12 = 0.11.0, have_libvala_0_11_0="yes", have_libvala_0_11_0="no")
AM_CONDITIONAL(HAVE_LIBVALA_0_11_0, test "$have_libvala_0_11_0" = "yes")
AC_SUBST(LIBVALA_0_11_0_CFLAGS)
AC_SUBST(LIBVALA_0_11_0_LIBS)



AC_CONFIG_FILES([Makefile
                 src/libvaladoc/valadoc-1.0.pc
                 src/libvaladoc/valadoc-1.0.deps
                 src/Makefile
                 icons/Makefile
                 doc/Makefile
                 src/libvaladoc/Makefile
                 src/driver/Makefile
				 src/driver/0.11.0/Makefile
				 src/driver/0.11.x/Makefile
				 src/driver/0.12.x/Makefile
				 src/driver/0.13.x/Makefile
                 src/doclets/Makefile
                 src/doclets/htm/Makefile
                 src/doclets/devhelp/Makefile
                 src/doclets/gtkdoc/Makefile
                 src/valadoc/Makefile
                 tests/Makefile
				 ])

AC_OUTPUT
